--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -335,6 +335,7 @@ client.urgent           $red $red $white $red $red
 for_window [class="Yad"] floating enable
 for_window [class="Lxappearance"] floating enable
 for_window [class="Pavucontrol"] floating enable
+for_window [class="Thunar"] floating enable
 
 # If following windows are floating, they will be certain size
 for_window [class="kitty" floating] resize set 1024 768
