--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -13,9 +13,9 @@ success_symbol = '[➜ ](bold green)'
 error_symbol = '[ ](bold red)'
 
 [directory]
-truncation_length = 8
-truncation_symbol = '…/'
-#truncate_to_repo = false
+truncation_length = 10
+#truncation_symbol = '…/'
+truncate_to_repo = false
 
 # Disable the package module, hiding it from the prompt completely
 [package]
