--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -84,6 +84,7 @@ set -g @plugin 'egel/tmux-gruvbox' # Gruvbox color theme
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-yank' # prefix+y to yank into system clipboard
+set -g @plugin 'wfxr/tmux-fzf-url' # fzf is required! Default binding: prefix+u
 
 # Plugin options
 set -g @continuum-restore 'on' # Restore tmux sessions on starting it again
