--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -57,7 +57,7 @@ font-2 = NotoEmoji:scale=10:style=Regular:size=15;4
 ;modules-center = workspaces
 modules-left = launcher left1 i3 left2 spotify
 ;modules-center = right8 title left4
-modules-right = keyboard backlight pulseaudio microphone-recording microphone-mute right5 battery right4 filesystem right6 network right3 temperature right2 date right1 power
+modules-right = pulseaudio microphone-recording microphone-mute backlight right7 battery right6 filesystem right5 network right4 temperature right3 keyboard right2 date right1 power
 
 wm-restack = i3
 cursor-click = pointer
