--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -4,6 +4,9 @@
 # Inserts a blank line between shell prompts
 add_newline = true
 
+[line_break]
+disabled = true
+
 # For actual output formatting:
 #format = ''
 
